# narrative-machine-humanoids

./: .gitignore  .xylophone.py.swp  1_beat_send_jinglebells.py  1_jinglebells.py  1_jinglebells.py.2  1_jinglebells.py.old  1_ros_jungleBells.py  2_beat_send_rock_jinglebells.py  2_rock_jinglebells.py  2_rocks_jinglebells.py  2_ros_jinglebells_rock.py  3_dirty_old_town.py  3_oldtown.py  4_beat_send_faliece_novidad.py  4_feliz_navidad.py  4_feliz_navidad.py.backup.working.no.network  4_feliz_navidad.py.works.no.network  Dockerfile  PyCM730.py  PyCM730_h.py  beat_send.py  beat_send_jinglebells.py  darwin_op.py  darwin_op_tmp.py  darwin_op_zero.py  drumExample.py  drumExampleAdvanced.py  drumExampleAdvanced3.py  drumExampleAdvanced_2.py  drumExampleAdvanced_fast.py  drumExampleAdvanced_send.py  drumExample_2.py  drumJingleBellRock.py  drumJingleBellRockSimple.py  example.py  f1_jinglebells.py  hubo_drc_head.py  install.sh  jinglebells.py  keypress.py  (+19 more)
ik/: CMakeLists.txt  darwin-op.robray  fk.py  ik.py  scene.robray
musicReading/: hot_cross_buns.mid  merry_xmas_theme_only.mid  musicRead.py
ros/: 4_feliz_navidad.py
